Closed
Bug 1329663
Opened 4 years ago
Closed 4 years ago
Move code from ScrollFrameHelper's destructor to ScrollFrameHelper::Destroy
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
mozilla53
People
(Reporter: kats, Assigned: kats)
Details
Attachments
(1 file)
2.62 KB,
patch
|
tnikkel
:
review+
jcristau
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
There's some code in the ScrollFrameHelper destructor that might be better in the ::Destroy function.
Assignee | ||
Comment 1•4 years ago
|
||
Try push at https://treeherder.mozilla.org/#/jobs?repo=try&revision=595937d81bb4134d4f5ea483c09399665333a303
Attachment #8825054 -
Flags: review?(tnikkel)
Updated•4 years ago
|
Attachment #8825054 -
Flags: review?(tnikkel) → review+
Pushed by kgupta@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/8c0e5f1e7485 Move code from ScrollFrameHelper's destructor the Destroy() function. r=tnikkel
Comment 3•4 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/8c0e5f1e7485
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Does this need an uplift?
Flags: needinfo?(bugmail)
Assignee | ||
Updated•4 years ago
|
status-firefox52:
--- → fix-optional
Assignee | ||
Comment 6•4 years ago
|
||
Comment on attachment 8825054 [details] [diff] [review] Patch Approval Request Comment [Feature/Bug causing the regression]: not really a bug per se [User impact if declined]: There's a very small chance that this patch will fix bug 1328129, so the user impact if declined is the small chance that bug 1328129 will keep happening. [Is this code covered by automated tests?]: yes [Has the fix been verified in Nightly?]: There's no real STR. In theory this change should not be user visible at all so there's nothing to verify [Needs manual test from QE? If yes, steps to reproduce]: no [List of other uplifts needed for the feature/fix]: none [Is the change risky?]: no, it's pretty straightforward. [Why is the change risky/not risky?]: Just moving some cleanup code to happen a little earlier. Automated tests should have caught any problems (for example if the Destroy() function isn't getting called) [String changes made/needed]: none
Attachment #8825054 -
Flags: approval-mozilla-aurora?
Comment 7•4 years ago
|
||
Comment on attachment 8825054 [details] [diff] [review] Patch speculative fix for aurora52
Attachment #8825054 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 8•4 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-aurora/rev/1ed8f57c6aa0
You need to log in
before you can comment on or make changes to this bug.
Description
•