Bug 1329663 - Move code from ScrollFrameHelper's destructor the Destroy() function. r=tnikkel

MozReview-Commit-ID: 1OWCCvR6X2N